tests/neg/named-tuples-3.check
-- [E007] Type Mismatch Error: tests/neg/named-tuples-3.scala:5:16 -----------------------------------------------------
5 |val p: Person = f  // error
  |                ^
  |                Found:    NamedTuple.NamedTuple[(Int, Any), (Int, String)]
  |                Required: Person
  |
  | longer explanation available when compiling with `-explain`
